@@ -226,3 +226,6 @@ hivdr
 hummel99
   for reporting and helping to debug channel switch issues with priority > 0
   for reporting a race condition when switching the server's LiveTV device
+
+Henrik Niehaus
+  for fixing replay of large TS files on 32-bit systems
